--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 body {
   background-color: #1c1b33;
 }
-.filter-bar {
-  display: flex;
+header {
+  display: none;
   justify-content: center;
   align-items: center;
   gap: 20px;
@@ -103,4 +103,123 @@ body {
   right: 15px;
   font-size: 22px;
   opacity: 0.4;
+}
+
+.sidebar {
+  width: 60px;
+  height: 100vh;
+  background: #22263a;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+  gap: 50px;
+}
+fa-solid fa-circle-check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sidebar img {
+  width: 50px;
+}
+.item {
+  width: 100%;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.item:hover {
+  background: #2a3045;
+  opacity: 1;
+}
+
+.active {
+  background: #04b2ff;
+  opacity: 1;
+  color: #fff;
+}
+.options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background: #1d1e38;
+  padding: 15px;
+  border-radius: 6px;
+}
+@media screen and (min-width: 1440px) {
+  body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  header {
+    display: flex;
+  }
+  main {
+    flex: 1;
+  }
+  .container {
+    width: 100%;
+    padding: 0 150px;
+  }
+
+  .menu-btn {
+    display: none;
+  }
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+  }
+  .options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    background: #1d1e38;
+    padding: 15px;
+    border-radius: 6px;
+    margin-top: 20px;
+  }
+  input {
+    background-color: #1b1b1d;
+    border: none;
+    padding: 10px;
+    width: 250px;
+  }
+  ::placeholder {
+    color: white;
+  }
+  .names {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    gap: 5px;
+  }
+  .lvl {
+    color: #04b2ff;
+  }
+  .trending h2 {
+    position: absolute;
+    top: 10px;
+  }
+  .trending {
+    display: flex;
+    position: relative;
+    gap: 30px;
+  }
+  .hotNow {
+    position: relative;
+  }
+  .hotNow h1 {
+    position: absolute;
+    margin-top: 150px;
+    font-size: 30px;
+  }
 }
